ops/k8s/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: NodePort
  selector:
    run: tinydotcom-backend
