ops/k8s/app/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "tinydotcom-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0b5ce1bccf894e98f,subnet-09cbb79fc3080933e
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:606544177517:certificate/f02512f7-42eb-4541-903e-1f0e88616e85
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
  labels:
    run: tinydotcom-ingress
spec:
  rules:
    - host: <placeholder-value>     # kustomize will take care of this
      http:
        paths:
          - path: /*
            backend:
              serviceName: "backend-service"
              servicePort: 80
